libs/preprocessor/tests/errors/pe1_unexpected_token/source.hpp
#define HELLO(var1; var2) Hello var1 var2

HELLO(1; 2)
